--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -236,6 +236,22 @@
   note = {\url{https://perf.wiki.kernel.org/index.php/Main_Page}}
 }
 
+@misc{memcached,
+  title = {memcached : a distributed memory object caching system},
+  howpublished = {Website},
+  year = {2020},
+  note = {\url{https://memcached.org/}}
+}
+
+@misc{phoronix,
+  title = {Open-Source, Automated Benchmarking},
+  howpublished = {Website},
+  year = {2020},
+  note = {\url{https://www.phoronix-test-suite.com/}}
+}
+
+
+
 @misc{migrationppt,
   title = {分布式系统中的进程迁移},
   howpublished = {Website},
@@ -271,13 +287,6 @@
   howpublished = {Website},
   year = {2020},
   note = {\url{https://www.qemu.org/}}
-}
-
-@misc{go,
-  title = {go-性能分析},
-  howpublished = {Website},
-  year = {2020},
-  note = {\url{http://scriptllh.info}}
 }
 
 @misc{phymem,
