--- a/tex/ack.tex
+++ b/tex/ack.tex
@@ -1,6 +1,20 @@
 %# -*- coding: utf-8-unix -*-
 \begin{thanks}
+在我大学四年的学习生活里以及毕业设计的完成过程中，我遇到了许许多多优秀的老师和同学，以及很多给予了我帮助的人，在此对他们表示感谢。
 
+感谢戚正伟教授对我毕业设计的指导以及学业中的诸多事宜的关心，是您的悉心关注和严格要求让我按时高质量地完成了毕业设计，在科研工作中您同我们一起进行实验，一起解决问题，提升了我的技术写作能力、表达能力，让我有了更好的代码规范，对我的学业有莫大的帮助，鼓励我不断解决问题，作出新的成绩。
+
+感谢上海市重点可扩展计算与系统实验室的学长们，你们对我有求必应，帮我解决了诸多我没有能力解决的问题。感谢张晋学长，没有他的建议和提示，就没有本文的结果。也要感谢其他项目组的学长，虽然他们没有对我的研究项目进行具体的帮助，但他们的热心与鼓励依然提高了我攻坚克难的信心。也要感谢陈育彬学长和丁卓成学长，你们的毕业论文和技术文档、代码对我了解巨型虚拟机有极大的帮助，是我的指明灯。
+
+感谢和我同级的余博识同学，他和我共同协作，讨论了许许多多的问题，为我提供了新的研究思路。在实验室期间，他和我合作完成了实验环境的配置，实验数据的统计，以及项目文档的撰写。他和我朝夕相处，是我最好的战友和伙伴。
+
+感谢在交大期间遇到的同学和朋友，是你们让我的生活更加丰富，是你们和我一起完成各项大作业，和我一起自习一起健身，一起吃饭一起娱乐，让我收获了美好真挚的友谊。
+
+感谢宿舍的宿管阿姨，以及食堂的阿姨，是你们照顾同学们的饮食起居，保证了学校生活的安全和便利，对我们无微不至地照顾。感谢你们！
+
+还有其他许许多多的老师与同学，你们是我大学生活的记忆，祝愿你们前途似锦，生活愉快，事业有成！
+
+上海市重点可扩展计算与系统实验室
   
 
 \end{thanks}
