--- a/tex/chapter06.tex
+++ b/tex/chapter06.tex
@@ -5,3 +5,11 @@
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
 \chapter{结论与展望}
+
+\section{已完成工作与结论}
+随着分布式集群的广泛使用，如何充分利用集群的资源成为了新的问题。本文认为，资源重分配是解决集群计算资源利用率低、不均衡的较好方案，而现有的资源重分配方案都或多或少存在各个方面的问题，如进程迁移的残余依赖问题，容器热迁移的下线时间过长问题，以及虚拟机热迁移的网络开销过大问题。本文认为，虚拟机热迁移之所以网络开销很大，是因为没有很好的遵循资源局部性原理，虚拟机内进程迁移事实上无需迁移整个客户机操作系统的所有状态。而分布式虚拟机将客户机操作系统的状态分布在多个节点上，无论客户机进程在哪个节点上运行，都可以使用本地节点保存的客户机操作系统状态，有很好的局部性。经测试，巨型虚拟机可以达到提高集群资源使用率的效果，且保证了集群中延迟敏感型任务和尽力而为型任务的服务质量。基于巨型虚拟机的进程迁移也有可优化之处，例如使用细粒度的调度算法，对进程迁移的开销进行排序，优先调度迁移开销小、内存访问少的进程。我们通过读取谷歌的数据进行集群仿真，验证了细粒度调度器比粗粒度调度器更优的设想，还通过进程的排序进一步优化了细粒度的调度算法，使得巨型虚拟机迁移方案的优势更加凸显。
+
+\section{不足与未来工作}
+本文尚未完成的工作还有很多：粗粒度的调度器目前还是通过Bash脚本实现，应当在Linux调度器中添加一个新的调度类来完成脚本的功能，这样调度器造成的开销也越小，可以获知的系统信息也越全面，也具有更多的优化空间；其次，细粒度的调度算法只在仿真集群中进行了模拟，此算法在真实环境下是否有效可行尚无定论。但本文提出的细粒度调度算法可以指导真实环境下的调度器设计，例如应当优先迁移内存访问量小的进程。细粒度的调度算法将客户机内的进程固定到两个不同的NUMA节点，如果有两个频繁访问同一块内存的进程被分配到两个NUMA节点上，则会发生频繁的页抖动。未来最重要的工作之一是发现这样的访存模式，将两个频繁共享内存的进程放在同一个NUMA节点上，而两个节点之间的进程应该尽量共享足够少的内存。具体的实现方向是在$task\_struct$中维护进程访问内存页在NUMA系统中的位置，根据这一信息做出调度决策。
+
+其次，本文只考虑了集群中计算资源（CPU）的利用率问题，事实上还存在内存利用率的问题。对于分布式聚群的内存资源利用率问题，进程迁移的目标节点可能无法容纳迁移来的进程的内存消耗，在这一点上得出的解决方案与上述的一致，即优先迁移内存占用小的进程。为了进一步解决内存资源使用率的问题，应当设计一个NUMA系统中高效的物理内存页分配与替换算法，改写客户机的内核。目前内核中只存在NUMA自动平衡算法\cite{balancing}，其目的是减小NUMA远程节点访问的次数，提高NUMA系统的可扩展性，而内存资源使用率并不在其考虑范围之内，故这个问题可作为本文未来的研究课题。
