--- a/tex/chapter01.tex
+++ b/tex/chapter01.tex
@@ -18,8 +18,16 @@
 在分布式集群的调度策略方面，Mesos\cite{mesos}设计了细粒度的资源分配器，然而由于现今的分布式框架都自带有极其复杂的调度器，会彼此产生影响，因此添加了双层调度器，在各个分布式框架之间进行调度，使得各个框架达到接近最优的数据局部性（data locality）。Omega\cite{omega}是谷歌的集群管理系统，其核心是一个共享状态、无锁的并行程序调度器，使得调度器的延迟大大下降，相比于集中式的集群调度器更好地应对了集群中任务对资源需求的极速变化。随着数据处理任务的并行度越来越高，延迟要求越来越高，Sparrow\cite{sparrow}提出了一个分布式的、细粒度的调度器，解决了集中式采样系统所造成的吞吐量下降、延迟提高的问题。Graphene\cite{graphene}关注的是分布式系统中任务之间的依赖关系，以及多元化的资源需求。在并行数据处理系统中，任务之间的依赖关系网，是调度器作出调度决策时所需要关注的主要信息。Graphene则在任务运行时计算出任务之间的DAG，对未来的调度决策进行改进。
 
 \section{本文工作}
-Steal time指vCPU（虚拟机CPU）运行过程中等待物理CPU上其他任务所占的时间。本文将巨型虚拟机部署在有四个节点的分布式集群上，将BE型任务（可迁移任务）运行在客户机中，同时将LC型任务与巨型虚拟机混部，通过读取客户机中的steal time计算宿主机上的工作负载，选取巨型虚拟机中steal time最低的NUMA node（非一致性共享内存节点），将虚拟机中所有的BE型任务迁移到该node上，从而提高了集群总体的CPU资源占用率，也保证了集群中任务的QoS。本文还利用Google trace中clusterdata2011-2的task-uasge和task-event数据，模拟了一个由800台相同机器组成的分布式集群，使用Python脚本读取数据并模拟了调度过程，设计并测试了各种调度策略的效果。模拟的调度策略有：
+资源重分配是动态平衡集群工作负载的方案，可通过集群中工作负载的迁移提高集群总体的资源使用率。而进程迁移有残余依赖问题，不予考虑，而相较于虚拟机的热迁移，容器热迁移具有较高的下线时间（downtime）。为了避免虚拟机热迁移所造成的巨大的网络开销，以及迁移过程对客户机进程造成的下线时间，本文用分布式虚拟机内客户机进程的调度代替虚拟机的热迁移，通过将分布式虚拟机GiantVM（巨型虚拟机）部署在集群中，设计巨型虚拟机客户机的shell调度脚本，动态感知集群节点负载，在节点之间按需调度客户机进程，达到了集群中资源重分配的目的，提高了集群总体的CPU使用率。而分布式虚拟机中客户机进程的迁移涉及较少几部分的内存页传输，网络开销远小于虚拟机热迁移，又消除了下线时间，是高效低开销的迁移方式。本文还利用谷歌Borg集群提供的task-uasge、task-event两组在较长时间段内的集群工作负载的追踪数据，模拟了一个由800台相同机器组成的分布式集群，对巨型虚拟机的迁移过程进行仿真，在节点数目较多的真实集群上模拟测试了较长工作时间内调度算法的负载平衡性能。本文还利用分析了调度脚本的可优化空间，设计了更细粒度的调度算法，并将被迁移进程按照多种指标进行排序，优化了调度算法的集群负载平衡能力，减小了平衡过程的网络开销。
 
 
 \section{本文结构}
-本文将按如下形式进行叙述：
+本文将按如下步骤进行叙述：
+\begin{itemize}
+  \item 第一章介绍了本文所做工作的背景和研究意义，大致描述了本文所做的工作以及文章的结构。
+  \item 第二章介绍了本文的技术背景，包含进程的内存布局、NUMA架构相关优化，以及巨型虚拟机的实现架构对客户机内任务的性能影响，最后分析比较了数据中心任务负载的三种迁移方式，引出后文巨型虚拟机调度器的设计。
+  \item 第三章介绍了本文调度器的设计理念和设计目标，并介绍了shell语言实现的粗粒度巨型虚拟机任务调度器。
+  \item 第四章描述了集群追踪数据各个字段的内容，以及如何利用追踪数据搭建仿真环境，模拟了粗粒度调度器，还设计了细粒度的调度算法，并提出了不同的进程排序方式。
+  \item 第五章首先对真实环境下的巨型虚拟机平衡算法进行测试，验证shell脚本是否达到了设计目标，再对仿真环境下的粗粒度调度器和细粒度调度器进行测试，对比分析了不同的进程排序指标对细粒度调度器性能的影响。
+  \item 第六章对本文的调度器设计做了总结，并分析了当前设计的优点和不足，提出了未来工作的方向。
+\end{itemize}
